graphchan_backend/check_backend_error.txt
warning: `/Users/max/.cargo/config` is deprecated in favor of `config.toml`
note: if you need to support cargo 1.38 or earlier, you can symlink `config` to `config.toml`
    Checking graphchan_backend v0.1.0 (/Users/max/Code/OrbWeaver/graphchan_backend)
error[E0599]: no method named `list_for_post` found for opaque type `impl FileRepository + '_` in the current scope
  --> graphchan_backend/src/threading.rs:49:43
   |
49 |                 let files = repos.files().list_for_post(&post.id)?;
   |                                           ^^^^^^^^^^^^^ method not found in `impl FileRepository + '_`
   |
  ::: graphchan_backend/src/database/repositories.rs:30:8
   |
30 |     fn list_for_post(&self, post_id: &str) -> Result<Vec<FileRecord>>;
   |        ------------- the method is available for `impl FileRepository + '_` here
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `FileRepository` which provides `list_for_post` is implemented but not in scope; perhaps you want to import it
   |
 1 + use crate::database::repositories::FileRepository;
   |

error[E0624]: associated function `from_record` is private
   --> graphchan_backend/src/threading.rs:50:80
    |
 50 |                 let file_views = files.into_iter().map(crate::files::FileView::from_record).collect();
    |                                                                                ^^^^^^^^^^^ private associated function
    |
   ::: graphchan_backend/src/files.rs:226:5
    |
226 |     fn from_record(record: FileRecord) -> Self {
    |     ------------------------------------------ private associated function defined here

error[E0599]: no method named `list_for_post` found for opaque type `impl FileRepository + '_` in the current scope
  --> graphchan_backend/src/threading.rs:78:39
   |
78 |             let files = repos.files().list_for_post(post_id)?;
   |                                       ^^^^^^^^^^^^^ method not found in `impl FileRepository + '_`
   |
  ::: graphchan_backend/src/database/repositories.rs:30:8
   |
30 |     fn list_for_post(&self, post_id: &str) -> Result<Vec<FileRecord>>;
   |        ------------- the method is available for `impl FileRepository + '_` here
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `FileRepository` which provides `list_for_post` is implemented but not in scope; perhaps you want to import it
   |
 1 + use crate::database::repositories::FileRepository;
   |

error[E0624]: associated function `from_record` is private
   --> graphchan_backend/src/threading.rs:79:76
    |
 79 |             let file_views = files.into_iter().map(crate::files::FileView::from_record).collect();
    |                                                                            ^^^^^^^^^^^ private associated function
    |
   ::: graphchan_backend/src/files.rs:226:5
    |
226 |     fn from_record(record: FileRecord) -> Self {
    |     ------------------------------------------ private associated function defined here

error[E0277]: the trait bound `FileView: serde::Deserialize<'de>` is not satisfied
    --> graphchan_backend/src/threading.rs:179:16
     |
 179 |     pub files: Vec<crate::files::FileView>,
     |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Deserialize<'_>` is not implemented for `FileView`
    --> graphchan_backend/src/files.rs:205:1
     |
 205 | pub struct FileView {
     | ^^^^^^^^^^^^^^^^^^^
     = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `FileView` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `Deserialize<'de>`:
               `&'a [u8]` implements `Deserialize<'de>`
               `&'a serde_bytes::bytearray::ByteArray<N>` implements `Deserialize<'de>`
               `&'a serde_bytes::bytes::Bytes` implements `Deserialize<'de>`
               `&'a serde_json::value::RawValue` implements `Deserialize<'de>`
               `&'a std::path::Path` implements `Deserialize<'de>`
               `&'a str` implements `Deserialize<'de>`
               `()` implements `Deserialize<'de>`
               `(T,)` implements `Deserialize<'de>`
             and 374 others
     = note: required for `Vec<FileView>` to implement `Deserialize<'_>`
note: required by a bound in `next_element`
    --> /Users/max/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_core-1.0.228/src/de/mod.rs:1771:12
     |
1769 |     fn next_element<T>(&mut self) -> Result<Option<T>, Self::Error>
     |        ------------ required by a bound in this associated function
1770 |     where
1771 |         T: Deserialize<'de>,
     |            ^^^^^^^^^^^^^^^^ required by this bound in `SeqAccess::next_element`

error[E0277]: the trait bound `FileView: serde::Deserialize<'de>` is not satisfied
    --> graphchan_backend/src/threading.rs:179:16
     |
 179 |     pub files: Vec<crate::files::FileView>,
     |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Deserialize<'_>` is not implemented for `FileView`
    --> graphchan_backend/src/files.rs:205:1
     |
 205 | pub struct FileView {
     | ^^^^^^^^^^^^^^^^^^^
     = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `FileView` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `Deserialize<'de>`:
               `&'a [u8]` implements `Deserialize<'de>`
               `&'a serde_bytes::bytearray::ByteArray<N>` implements `Deserialize<'de>`
               `&'a serde_bytes::bytes::Bytes` implements `Deserialize<'de>`
               `&'a serde_json::value::RawValue` implements `Deserialize<'de>`
               `&'a std::path::Path` implements `Deserialize<'de>`
               `&'a str` implements `Deserialize<'de>`
               `()` implements `Deserialize<'de>`
               `(T,)` implements `Deserialize<'de>`
             and 374 others
     = note: required for `Vec<FileView>` to implement `Deserialize<'_>`
note: required by a bound in `next_value`
    --> /Users/max/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_core-1.0.228/src/de/mod.rs:1916:12
     |
1914 |     fn next_value<V>(&mut self) -> Result<V, Self::Error>
     |        ---------- required by a bound in this associated function
1915 |     where
1916 |         V: Deserialize<'de>,
     |            ^^^^^^^^^^^^^^^^ required by this bound in `MapAccess::next_value`

Some errors have detailed explanations: E0277, E0599, E0624.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `graphchan_backend` (lib) due to 6 previous errors
